# robot-on-python

./: .gitignore  .installer_config  README.md  constants.py  networktables.json  physics.py  robot.py  simgui-window.json  simgui.json
PathWeaver/: pathweaver.json
PathWeaver/Paths/: Path1
apriltag/: test1.py
bench1/: constants.py  pyproject.toml  robot.py  robotcontainer.py
bench1/subsystems/: motors.py
paths/output/: Path1.wpilib.json
robo1/: cli.py  constants.py  physics.py  robot.py
robo1/.wpilib/: wpilib_preferences.json
rockway-ds/: Cargo.toml
rockway-ds/src/: joystick.rs  main.rs
